2013-02-26  Felix Ingrand  <felix@precise>

	* oprs-type.c (compare_term): reverse some symbol comparison which
	were intended to be string comparison...
	(compare_term): Fix this function which was not always returning meaningful results...

	* constant.h (COPYRIGHT_STRING): Updated the copyright date.

2013-01-23  Felix Ingrand  <felix@precise>

	* Simplified some HAS_ HAVE_ cpp symbol (directly used the one provided by autoconf).

2013-01-21  Felix Ingrand  <felix@precise>

	* mp-openprs.pc.in (Libs): Not linking with the proper library... ExtMP should be used.

	* socket_f.h, oprs-pprint.c: removed IGNORE code.

2013-01-18  Felix Ingrand  <felix@precise>

	* database.c (key_term_cmp): Symbol are uniquely present in a
	kernel, comparison can be a pointer one.

2013-01-09  Felix Ingrand  <felix@precise>

	* macro.h (FREE_SLIST): This macro had a weird test... simplified it.

2012-10-12  Felix Ingrand  <felix@lucid>

	* Makefile.am: replace @XXXX@ with ${XXXX}.

2012-10-11  Felix Ingrand  <felix@lucid>

	* Makefile.am (%.h): "if WANT_GTK"'ed the .png->.h icon generation
	for the GTK version .

2012-09-11  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-dump_f.h: uchar-> u_char

 	* Makefile.am: XT_FLAGS->XT_CFLAGS and add MOTIF_CFLAGS.

2012-08-09  Felix Ingrand  <felix@cturtle>

	* Makefile.am (noinst_LTLIBRARIES): do not build gtk binaries by
	default (configure with --enable-gtk if you want to override
	this).

2012-08-02  Felix Ingrand  <felix@cturtle>

	* lex-exp.l.part: Removed the various "test, achieve,
	maintain, etc" temporal operators... hardly used and
	confusing. Moreover, it creates "problem" with namespace when
	loading external OPs. (e.g. for the test module ;-) )

2012-08-01  Felix Ingrand  <felix@cturtle>

	* oprs-type.c (build_dummy_expr_terms): Added this function for
	openprs genom3 encoding... not sure it is a great idea.

	* oprs-type_f-pub.h: Exporting build_term_l_list_from_c_list.

2012-03-14  Felix Ingrand  <felix@cturtle>
