@@ -1,0 +1,11 @@
+#ifdef  __cplusplus
+extern "C"  {
+#endif
+
+void add_external_readfds(int ext_fds);
+void remove_external_readfds(int ext_fds);
+
+#ifdef  __cplusplus
+}
+#endif
+
